<resources>
    <string name="app_name">OnlineShopApp</string>
    <string name="bannerText">LIVE YOUR\nPERFECT</string>
    <string name="splashText1">Smart, Fashionable &amp; gorgeous\ncollection makes you cool</string>
    <string name="startBtn">Get Started</string>
    <string name="search">Search anything</string>
    <string name="dashboard">Dashboard image</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="myOrder">My Order</string>
    <string name="profile">Profile</string>
    <string name="title">title</string>
    <string name="price">$0</string>
    <string name="priceName">Price</string>
    <string name="zero">0</string>
    <string name="detail">Product Detail</string>
    <string name="description">description</string>
    <string name="color">Select Color</string>
    <string name="buy">Buy Now</string>
    <string name="add">Add to Cart</string>
</resources>